@@ -168,8 +168,6 @@ typedef struct {
 	int user_num;
 	HashTable *user;
 
-	HashTable *conns;
-
     OCIEnv *pEnv;
 } php_oci_globals;
 
